# ext4-cli

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ext4_cli/: __init__.py  __main__.py
src/: main.rs  output.rs  source.rs
src/commands/: cat.rs  cp.rs  info.rs  ls.rs  mod.rs  stat.rs
tests/: cat.rs  cp.rs  create_fixtures.sh  info.rs  ls.rs  stat.rs
