[package]
name = "ext4-cli"
version = "0.0.1"
edition = "2024"
rust-version = "1.90"
description = "Read ext4 filesystems from image files and block devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rvben/ext4-cli"

[[bin]]
name = "ext4"
path = "src/main.rs"

[dependencies]
ext4-view = { version = "0.9", features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
