[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ext4-cli"
dynamic = ["version"]
description = "Read ext4 filesystems from image files and block devices"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: System :: Filesystems",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rvben/ext4-cli"
Repository = "https://github.com/rvben/ext4-cli.git"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
python-packages = ["ext4_cli"]
strip = true
